# oscardomingo

./: .gitignore  .htaccess  config.toml  gulpfile.js  index.html  mynt.yml  package.json  projects.html  pyproject.toml  readme.md
.mynt/: about.html
.mynt/_assets/css/: font.css  oscardomingo.css
.mynt/_templates/: page.header.html
.zed/: tasks.json
_containers/projects/: 2021-07-17-variety-menu.md  2021-07-18-characters-counter.md
_posts/: 2021-07-18-setting-up-notea-with-minio.md  2021-07-18-up-and-running-with-mynt.md
_templates/: layout.html  post.html  post_layout.html  project.html
app/: about.html  blog-post.html  blog.html  index.html  work-page.html  works.html
app/css/: styles.css
app/scss/: _config.scss  _mixins.scss  styles.scss
app/scss/components/: _blocks.scss  _box-sizing.scss  _header.scss  _headings.scss  _normalize.scss  _wrappers.scss
content/: about.md  feed.xml.md
content/blog/: 2024-04-18-hello-world.md  2024-05-03-installing-maya-on-a-rocky-linux-9-container.md  _index.md
content/projects/: _index.md
hugo-site/oscardomingo/: config.toml
hugo-site/oscardomingo/content/: about.md
hugo-site/oscardomingo/public/: 404.html  (+3 more)
oscardomingo/: db.sqlite3  manage.py
oscardomingo/blog/: admin.py  models.py  urls.py  views.py
oscardomingo/oscardomingo/: asgi.py  settings.py  urls.py  wsgi.py
public/: search_index.en.js
public/css/: oscardomingo.css  reset.css
scripts/: deploy
static/: styles.css
static/css/: oscardomingo.css
templates/: about.html  base.html  blog-page.html  blog.html  feed.xml  index.html
(+31 files in other folders)
